# noisy-image-gen

./: .gitignore  Cargo.toml  README.md  Sample.noisy
src/: coloring.rs  image-gen.rs  image_gen.rs  main.rs  noise.rs  shapes.rs
