[package]
name = "noisy-image-gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name="image-gen-cli"
path="src/main.rs"

[lib]
name = "image_gen"
path = "src/image_gen.rs"

[dependencies]
image = "0.25.5"
piston = "1.0.0"
rand = "0.9.0-beta.1"
rand_distr = "0.5.0-beta.2"
pest = "2.6"
pest_derive = "2.6"

